# random-speaker

./: .gitignore  Cargo.toml  config.toml  copy-sounds.sh  next-play  normalize.sh  rebuild.sh  remove-not-in-normalize.sh  reset.sh
src/: main.rs
