[package]
name = "speakthing"
version = "0.1.0"
edition = "2021"

[dependencies]
rodio = "0.20"
toml = "0.8"
rand = "0.8"
tokio = { version = "1.41.1", features = ["full", "signal"] }
async-watcher = "0.3.0"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
anyhow = "1.0.93"
